Fixing the swipe movement on mobile version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,9 +210,7 @@ form .btnSearch .fas.fa-search{
 	margin:auto;
 	padding-bottom: 30px;
 }
-.slider--controls{
-	display: none;
-}
+
 .vakinhaWon h1{
 	font-weight: 200;
 	color: #434040;
@@ -225,6 +223,9 @@ form .btnSearch .fas.fa-search{
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	gap:30px;
+}
+.vakinhaWon .container{
+	transition: all ease-out 0.3s;
 }
 .container--photo img{
 	width: 100%;
